hphp/test/zend/good/tests-classes/static_properties_undeclared_assignRef.php
<?php
Class C {}
$a = 'foo';
C::$p =& $a;
?>